* NEXT
- Hats are now allocated uniquely across windows.  Location functions
  now search in all visible windows.
- Improved hat stability: If a token can retain its hat without
  incurring a larger penalty, it will try to do so.
- Added new function ~hatty-token-at~: Returns the boundaries of the
  token at a given position.
- Added ~thing-at-pt~ thing ~hatty-token~.
- Improved performance and responsiveness.

* 1.2.0 [2025-02-28 Fri]
- Scale hat sizes according to default face height.

* 1.1.0 [2025-02-27 Thu]
- Fix hat rendering issue when the text is readonly.
- Add penalty system for prioritizing certain hat styles.
- Fix "ex" having the wrong shape.

* 1.0.1 [2025-02-18 Tue]
- Add usage example to README.
- Avoid throwing an error when a character has no glyph in the current
  font.
- Add screenshots to README.

* 1.0.0 [2025-02-15 Sat]
- MELPA release.

* 0.3.2 [2025-01-23 Thu]
- Fix slow hat allocation for multiply wrapped lines.

* 0.3.1 [2024-12-29 Sun]
- Hats are now rendered for non-alphanumeric characters as well.
- Added function ~hatty-locate-token-region~ for getting the region of
  the token that a hat is placed over.
- Added the rest of the hats available in cursorless.
- Fix character height for characters on wrapped lines.

* 0.3.0 [2024-09-25 Wed]
- When loading hatty, it will now try to pick colors appropriate for
  the color theme of the user.
- The defaut hat color and shape is now identified by the symbol
  ~default~.
- Hats are now properly rendered for the last word of links in
  org-mode.
- ~hatty-reallocate-hats~ has been renamed to ~hatty-reallocate~.
- ~hatty-request-reallocation~ has been added.  This function tries to
  avoid multiple rapid executions of ~hatty-reallocate~.
- ~hatty-with-hat-reallocate~ has been removed.

* 0.2.2 [2024-09-04 Wed]
- Fix rendering bug pertaining to the raise display property.
- Decrease required Emacs version to 26.1.

* 0.2.1 [2024-09-04 Wed]
- Update documentation.

* 0.2.0 [2024-08-31 Sat]